--- a/index.html
+++ b/index.html
@@ -27,6 +27,10 @@
     <div class="container">
       <p class="text-left">I can see that you are upset. Can we talk?</p>
     </div>
+    
+    <div class="timecontainer">
+      <p class="time">Sat, 12 Sep, 12:29pm</p>
+    </div>
 
     <div class="container right">
       <p class="text-right">I don't know.
@@ -34,6 +38,31 @@
     </div>
 
     <div class="container">
+      <p class="text-left">I’ve been working on a conversation system that can promote empathy and reflection by providing an AI that will listen to you and reflect your thoughts, responding to its own interpretation of these thoughts. This conversation system is designed to help people calm down and power through, and complement existing therapies such as Cognitive Behavior Therapy (CBT). I’m feeling really happy about it — we’re starting small with this system, and we’d like to create one that’s good enough to be available online by next year. To make this happen we want to take the current version and field it out to thousands and thousands of people and use those experiences to learn how to improve it substantially toward the goal of delivering that system.</p>
+    </div>
+
+    <div class="container right">
+      <p class="text-right">Oh what? It's AI? How long have you been working on it?</p>
+    </div>
+
+    <div class="container">
+      <p class="text-left">About two and a half years now. It’s been a very interesting and tough problem to work on — it’s still early days but we’ve made a lot of progress so far. I think we’ve got a good shot at this.
+</p>
+    </div>
+
+    <div class="container right">
+      <p class="text-right">I guess I could just talk to the AI when it's done aha...</p>
+    </div>
+
+    <div class="container">
+      <p class="text-left"> </p>
+    </div>
+
+    <div class="container right">
+      <p class="text-right">Do you think it could  </p>
+    </div>
+    
+      <div class="container">
       <p class="text-left">I’ve been working on a conversation system that can promote empathy and reflection by providing an AI that will listen to you and reflect your thoughts, responding to its own interpretation of these thoughts. This conversation system is designed to help people calm down and power through, and complement existing therapies such as Cognitive Behavior Therapy (CBT). I’m feeling really happy about it — we’re starting small with this system, and we’d like to create one that’s good enough to be available online by next year. To make this happen we want to take the current version and field it out to thousands and thousands of people and use those experiences to learn how to improve it substantially toward the goal of delivering that system.</p>
     </div>
 
