--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     </div>
     
         <div class="container right">
-      <p class="text-right"> I mean yeah, everyone knows One Week but that's about it. What's your favourite song by them? Mine's probably Bank Job.</p>
+      <p class="text-right"> I mean yeah, everyone knows One Week but that's about it. What's your favourite song by them? </p>
     </div>
     
      <div class="container right">
